# bookaroo_backend

./: .gitignore  docker-compose.yml
api/: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
api/database/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-3797805322071474378.wt  collection-0-7312396769035368317.wt  collection-0-7496295190631431093.wt  collection-2-7312396769035368317.wt  collection-4--2349874692252131402.wt  collection-4-7312396769035368317.wt  collection-7-7312396769035368317.wt  index-1-3797805322071474378.wt  index-1-7312396769035368317.wt  index-1-7496295190631431093.wt  index-3-7312396769035368317.wt  index-5--2349874692252131402.wt  index-5-7312396769035368317.wt  index-6-7312396769035368317.wt  index-8-7312396769035368317.wt  index-9-7312396769035368317.wt  sizeStorer.wt
api/database/db/diagnostic.data/: metrics.2023-11-23T21-15-07Z-00000  metrics.2023-11-23T21-15-12Z-00000  metrics.2023-11-24T13-11-55Z-00000  metrics.2023-11-24T13-35-08Z-00000  metrics.2023-11-24T13-37-22Z-00000  metrics.2023-11-24T13-42-09Z-00000  metrics.2023-11-24T13-42-42Z-00000  metrics.2023-11-26T08-14-21Z-00000  metrics.2023-11-26T18-13-48Z-00000  metrics.2023-11-26T19-58-37Z-00000  metrics.2023-11-27T09-17-45Z-00000  metrics.2023-11-28T07-37-57Z-00000  metrics.2023-11-29T18-54-56Z-00000  metrics.2023-11-30T13-12-53Z-00000  metrics.2023-11-30T22-17-42Z-00000  metrics.2023-12-01T08-47-04Z-00000  metrics.2023-12-03T09-19-55Z-00000  metrics.2023-12-03T12-42-28Z-00000  metrics.2023-12-06T11-59-04Z-00000  metrics.2023-12-06T14-01-56Z-00000  metrics.2023-12-07T12-11-29Z-00000  metrics.2023-12-27T09-31-11Z-00000  metrics.interim  (+4 more)
api/docs/: tags.py
api/src/: database.py  main.py
api/src/communication/: RabbitMq.py  grpc.py
api/src/proto/: bookaroo.proto  bookaroo_pb2_grpc.py
api/src/schemas/: Methods.py  MongoModel.py  PostBookarooLog.py  book.py  library.py  user.py
bookaroodb/: README.md  dockerfile  pyproject.toml  requirements.txt
bookaroodb/src/: database.py  main.py  servicer.py
bookaroodb/src/proto/: bookaroo_pb2.py  bookaroo_pb2_grpc.py
bookaroodb/src/schemas/: MongoModel.py  badge.py  book.py  library.py  user.py
logger/: dockerfile  pyproject.toml  requirements.txt
logger/src/: Database.py  RabbitMq.py  main.py
logger/src/schemas/: BookarooLog.py  PostBookarooLog.py
(+32 files in other folders)
