[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrik Michl", email = "xmichl@mendelu.cz"},
]
dependencies = [
    "uuid>=1.30",
    "uvicorn[standard]>=0.24.0.post1",
    "fastapi>=0.104.1",
    "grpcio>=1.60.0",
    "sqlalchemy>=2.0.25",
    "pika>=1.3.2",
    "pymongo>=4.6.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
dependencies = [
    "uuid>=1.30",
    "pymongo>=4.6.0",
    "uvicorn[standard]>=0.24.0.post1",
    "fastapi>=0.104.1",
    "grpcio>=1.60.0",
    "sqlalchemy>=2.0.25",
    "pika>=1.3.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
