[project]
name = "logger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Patrik Michl", email = "xmichl@mendelu.cz"},
]
dependencies = [
    "pika>=1.3.2",
    "sqlalchemy>=2.0.25",
    "fastapi>=0.109.0",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
[tool.pdm.scripts]
dev = "python3 ./src/main.py"
